syntax = "proto3";

package chat;
option go_package = "https://github.com/antonPalmFolkmann/DISYS_MiniProject2;ChatService";

service ChittyChatService{
  rpc Publish (PublishMessageRequest) returns (PublishMessageReply) {}
  rpc BroadCast (ChatMessage) returns (PublishMessage) {}
}

message PublishMessageRequest{
  string message = 1;
  int32 nodeA = 2;
  int32 nodeB = 3;
  int32 nodeC = 4;
}

message PublishMessageReply{
  
}

message ChatMessage{
  string message = 1;
}

message PublishMessage{
  string message = 1;
}